Python API working with website

--- a/youtubeTool/templates/recco.html
+++ b/youtubeTool/templates/recco.html
@@ -67,10 +67,10 @@
 
     <h1>Youtube Recommender</h1>
     <p class="lead">Please enter the desired URL to start our machine learning process!</p>
-    <form method = "POST">
-      <label>URL:</label>
-      <input type="url" "name"=search_videoLink></input>
-    </form>
+      <form method = "POST">
+        <label>URL:</label>
+        <input type="url" name= "search_videoLink"></input>
+      </form>
     <p class="lead">
       <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Go!</button>
     </p>
