Machine Readable Information/Output added.

--- a/youtubeTool/templates/results.html
+++ b/youtubeTool/templates/results.html
@@ -58,6 +58,7 @@
         <a class="nav-link active" aria-current="page" href="{{ url_for('home')}}">Home</a>
         <a class="nav-link" href="{{ url_for('info')}}">Technical Info</a>
         <a class="nav-link" href="{{ url_for('recco')}}">Recommender</a>
+        <a class="nav-link" href="{{ url_for('machineReadable')}}">Machine Readable Output</a>
       </nav>
     </div>
   </header>
