--- a/youtubeTool/static/style.css
+++ b/youtubeTool/static/style.css
@@ -11,7 +11,13 @@
   text-shadow: none; /* Prevent inheritance from `body` */
 }
 
-
+.container {
+  margin: 0 auto;
+  margin-bottom: 0;
+}
+#foot {
+  bottom:0;
+}
 /*
  * Base structure
  */
@@ -20,7 +26,7 @@ body {
   text-shadow: 0 0.5rem 2rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
   background: url('images/space.jpg') no-repeat center center fixed;
-  
+
 }
 
 .cover-container {
