Fixed Component5 output layout and member names on each page.

--- a/youtubeTool/templates/info.html
+++ b/youtubeTool/templates/info.html
@@ -71,7 +71,7 @@
   </main>
 
   <footer class="mt-auto text-white-50" id="foot">
-    <p>A Cardiff University Project, presented by <br>Dafydd Thomas, David Diaz Clinton, John Baker, Jose Hernaiz and Vidhi Chaudhary  </p>
+    <p>A Cardiff University Project, presented by <br>Dafydd Thomas, David Diaz Clifton, John Baker, Jose Adrian Padilla Hernaiz and Vidhi Chaudhary  </p>
   </footer>
 
 </div>
