--- a/youtubeTool/templates/info.html
+++ b/youtubeTool/templates/info.html
@@ -66,7 +66,7 @@
 
     <h1>Youtube Recommender</h1>
     <h2>About the Project</h2>
-    <p class="lead"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris id libero varius, suscipit lorem vitae, facilisis ligula. Praesent sollicitudin neque leo, vel molestie eros volutpat ut. Nullam posuere tincidunt lectus mollis convallis. Proin et nisi eget erat tincidunt blandit. Proin in urna et magna venenatis dapibus. Aliquam ex elit, mollis ut diam in, rhoncus volutpat lacus. Vivamus pretium ut odio in iaculis. Pellentesque scelerisque dolor et purus aliquet pulvinar. Integer et aliquam mauris, ac ornare lectus. Aenean tincidunt, enim non pharetra tempor, leo neque accumsan tellus, in condimentum diam sem at diam. Suspendisse potenti. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer purus libero, interdum in lorem ut, pulvinar aliquam eros. Praesent varius, tortor a tristique ultrices, lorem augue tempus velit, at vestibulum nulla risus nec nisi. Sed rutrum, massa sit amet sagittis ultrices, lectus sapien elementum risus, nec ornare nulla odio eget tellus. Donec mollis est eu pharetra ultrices. </p>
+    <p class="lead"> The purpose for our application is to provide a system where a user can input the video link of a youtube video that they enjoy into the system, which will then recommend a few youtube videos that they may enjoy watching based off of that video. Our system provides the user with other similar videos to the one whose link they entered, through the use of machine learning. </p>
     
   </main>
 
