--- a/youtubeTool/templates/allVideos.html
+++ b/youtubeTool/templates/allVideos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- In this .html, the same HTML template is used to keep regularity among all templates.-->
 <html class="h-100" lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
    
@@ -62,14 +62,15 @@
   </header>
 
   <main class="px-3" id="box">
+    <!-- A textarea for each video is created below in order to show all of the different outputs in JSON-LD and HTML, making these easily accessible for the user to copy and paste onto Structured Data Testing Tool -->
 
     <h1>Machine Readable output in JSON-LD and HTML</h1>
     <br>
     <br>
-    <h2>For "Lamborghini Aventador S Roadster vs McLaren 720S Spider - DRAG RACE, ROLLING RACE & BRAKE TEST"</h2>
+    <h2>For "Lamborghini Aventador S Roadster vs McLaren 720S Spider - DRAG RACE, ROLLING RACE & BRAKE TEST"</h2> <!-- Title of specific video-->
     <br>
     <br>
-    <h3>JSON-LD Output:</h3>
+    <h3>JSON-LD Output:</h3> <!-- Define Markup format -->
     <!-- textarea { white-space: nowrap;<!--> 
     <textarea rows="10" cols="75">
      
@@ -103,7 +104,7 @@
     </script>
      </textarea>
 
-    <h3>HTML Output:</h3>
+    <h3>HTML Output:</h3> <!-- Second markup format -->
 
     <textarea rows="10" cols="75">
      
@@ -137,7 +138,7 @@
      <br>
      <br>
      <br>
-     <h2>For "FULL SPEED rc car assault!"</h2>
+     <h2>For "FULL SPEED rc car assault!"</h2> <!-- Second video, and so on below.-->
      <br>
      <br>
      <h3>JSON-LD Output:</h3>
