--- a/youtubeTool/templates/recco.html
+++ b/youtubeTool/templates/recco.html
@@ -71,44 +71,7 @@
       <form method = "POST">
         <label>URL:</label>
         <input type="url" name= "search_videoLink"></input>
-        <p class="lead"><br>Filter your Search</p>
-        <label>Categories:</label>
-        <input type="checkbox" name="Categories" id="Autos&Vehicles" value="Autos&Vehicles" checked>
-        <label for="Autos&Vehicles">Autos&Vehicles </label>
-        <input type="checkbox" name="Categories" id="Education" value="Education" checked>
-        <label for="Education">Education </label>
-        <input type="checkbox" name="Categories" id="Entertainment" value="Entertainment" checked>
-        <label for="Entertainment">Entertainment </label>
-        <input type="checkbox" name="Categories" id="Film&Animation" value="Film&Animation" checked>
-        <label for="Film&Animation">Film&Animation </label>
-        <input type="checkbox" name="Categories" id="Gaming" value="Gaming" checked>
-        <label for="Gaming">Gaming </label>
-        <input type="checkbox" name="Categories" id="HowTo&Style" value="HowTo&Style" checked>
-        <label for="HowTo&Style">HowTo&Style </label>
-        <input type="checkbox" name="Categories" id="People&Blogs" value="People&Blogs" checked>
-        <label for="People&Blogs">People&Blogs </label>
-        <input type="checkbox" name="Categories" id="Science&Technology" value="Science&Technology" checked>
-        <label for="Science&Technology">Science&Technology </label><br>
-
-        <label>Likes:</label>
-        <input type="checkbox" name="Likes" id="0-10,000" value="0-10,000" checked>
-        <label for="0-10,000">0-10,000 </label>
-        <input type="checkbox" name="Likes" id="10,000-100,000" value="10,000-100,000" checked>
-        <label for="10,000-100,000">10,000-100,000 </label>
-        <input type="checkbox" name="Likes" id="100,000-1,000,000" value="100,000-1,000,000" checked>
-        <label for="100,000-1,000,000">100,000-1,000,000 </label>
-        <input type="checkbox" name="Likes" id=">1,000,000" value=">1,000,000" checked>
-        <label for=">1,000,000">>1,000,000 </label><br>
-
-        <label>Views: </label>
-        <input type="checkbox" name="Views" id="0-100,000" value="0-100,000" checked>
-        <label for="0-100,000">0-100,000 </label>
-        <input type="checkbox" name="Views" id="100,000-1,000,000" value="100,000-1,000,000" checked>
-        <label for="100,000-1,000,000">100,000-1,000,000 </label>
-        <input type="checkbox" name="Views" id="1,000,000-10,000,000" value="1,000,000-10,000,000" checked>
-        <label for="1,000,000-10,000,000">1,000,000-10,000,000 </label>
-        <input type="checkbox" name="Likes" id=">10,000,000" value=">10,000,000" checked>
-        <label for=">10,000,000">>10,000,000 </label>
+        
       </form>
     <p class="lead">
       <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Go!</button>
@@ -124,5 +87,6 @@
 
 </form>
 {% endblock content %}
+</div>
 
 </body></html>
